# reciever

./: .gitignore  BUILD.md  BUILD_CHANGES.md  BUILD_GUIDE.md  BUILD_README.txt  BUILD_SUMMARY.md  BUILD_TROUBLESHOOTING.md  CAST_SETUP.md  CHROME_CASTING.md  CLAUDE.md  CONNECTION_TESTING_GUIDE.md  Dockerfile  FIXES_APPLIED.md  FIX_FIREWALL_NOW.bat  INSTALLATION.md  INSTALL_UXPLAY.md  IPHONE_MIRRORING_SETUP.md  IPHONE_TROUBLESHOOTING.md  IT_WORKS_NOW.md  Makefile  QUICK_BUILD.md  QUICK_FIX_IPHONE.md  README.md  REFACTOR_SUMMARY.md  SERVER_STATUS_REPORT.md  SSL_SETUP.md  TESTING.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  airplay_receiver.py  build.bat  build.sh  build_windows.ps1  build_windows_easy.ps1  build_windows_simple.bat  cast_discovery.py  cast_receiver.html  cast_sender.html  client.html  desktop_caster.spec  (+21 more)
scripts/: install_gstreamer_python.sh
src/: __init__.py  app.py
src/airplay/: __init__.py  receiver.py  uxplay.py
src/common/: __init__.py  config.py  logging.py  utils.py
src/discovery/: __init__.py  mdns.py
src/gui/: __init__.py  viewer.py
src/webrtc/: __init__.py  server.py  stream_manager.py  video_track.py
tests/: test_diagnostics.py  test_iphone_connection.py
